# Streamer-Pack

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
.kilo/plans/: 1776600033482-brave-canyon.md  1776600543812-gentle-squid.md
installed/video_capture/vid_capture/: index.js
modules/example-module/: index.ts
modules/video_capture/: index.js  manifest.json
src/: App.tsx  debugLogger.ts  modules-loader.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  plugin_manager.rs
src/component/body/: Browse.tsx  Container.tsx  Content.tsx  SideBar.tsx  Window.tsx
src/component/card/: PackageCard.tsx
src/component/debug/: debugPanel.tsx
src/component/layout/: MainLayout.tsx  SideBar.tsx
src/hooks/: useInstalledList.ts  usePackage.ts  usePackageInstaller.ts
src/types/: maintypes.ts  tabtypes.ts
