[package]
name = "tauri-app"
version = "0.1.0"
description = "Streamer Pack v1"
authors = ["tudii <you@example.com>"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }  # no "wry-webkit" or "webkit2gtk"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
