[package]
name = "tauri-app"
version = "0.1.0"
description = "Streamer Pack v1"
authors = ["tudii <you@example.com>"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
zip = "8"
